--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,3 @@
-
 <style>
     .title{
       font-family: 'TWK Everett Bold', sans-serif;
@@ -7,7 +6,7 @@
 </style>
 <div class="flex flex-col gap-3 w-[45vw] m-auto">
     <h1
-      class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-6xl md:text-5xl sm:text-3xl w-full"
+      class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-6xl md:text-4xl sm:text-3xl w-full h-full pb-5"
     >
       Innovación en Software y Tecnología
     </h1>
@@ -16,6 +15,6 @@
       En CodeCrafterStudios, desarrollamos cualquier producto de software que
       necesites: IA, blockchain, web, móvil y automatización. Nuestra
       innovación y enfoque personalizado garantizan resultados excepcionales.
-      Impulse su éxito con nosotros en la era digital.
+      Impulse su éxito con nosotros en la era digital.
     </h2>
 </div>
