style(mac): add component mac

--- a/src/components/Mac.astro
+++ b/src/components/Mac.astro
@@ -1,9 +1,10 @@
 <div class="relative z-10 w-full h-[630px] overflow-visible">
+
     <div class="absolute inset-[-16px] z-20">
         <img
           decoding="async"
           sizes="304px"
-          src="/public/media/laptop-removebg-preview.png"
+          src="/public/media/mac.svg"
           alt=""
           class="block w-full h-full rounded-inherit object-cover"
         />
