--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,8 @@ import Mac from "@components/Mac.astro";
     <main class="flex flex-col bg-primary  w-[70vw] gap-10  m-auto">
       <NavBar />
       <Hero/>
-      <section class="flex justify-center items-center">
-        <Movile />
-      </section>
+      <Mac/>
+      <Movile/>
     </main>
   </body>
 </html>
