fix(landing): new content

--- a/src/components/movile.astro
+++ b/src/components/movile.astro
@@ -1,7 +1,7 @@
 <div class="relative z-10 w-[284px] h-[600px] overflow-visible">
   <div class="absolute inset-0 scale-100 hover:scale-125 opacity-100">
     <video
-      src="https://framerusercontent.com/assets/uGojcgQ26rXl1z7GnxG3Hl6znI.mp4"
+      src="/public/media/videomovile.mp4"
       loop
       playsinline
       autoplay
