style(mac): add viedo in mac

--- a/src/components/Mac.astro
+++ b/src/components/Mac.astro
@@ -1,12 +1,20 @@
 <div class="relative z-10 w-full h-[630px] overflow-visible">
-
-    <div class="absolute inset-[-16px] z-20">
+    <div class="absolute inset-0 scale-100 hover:scale-125 opacity-100">
+      <video
+        src="/public/media/videoMac.mp4"
+        loop
+        playsinline
+        autoplay
+        class="cursor-auto w-[59vw] md:w-[55vw] lg:w-[55vw] lg:w-[48vw] md:h-full h-[20vh] rounded-[10px]  md:rounded-[35px] object-cover bg-transparent m-auto"
+      ></video>
+    </div>
+    <div class="absolute inset-[-16px]  md:inset-[-16px] z-20">
         <img
           decoding="async"
           sizes="304px"
           src="/public/media/mac.svg"
           alt=""
-          class="block w-full h-full rounded-inherit object-cover"
+          class="block w-[75vw] md:h-full h-[25vh] rounded-inherit md:m-auto m-2"
         />
     </div>
 </div>
