--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,37 @@ import Mac from "@components/Mac.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Code Crafther Studios</title>
   </head>
-  <body class="bg-primary">
-    <main class="flex flex-col bg-primary w-[70vw] gap-10 m-auto">
+  <body class="bg-black">
+    <main
+      class="flex flex-col bg-primary w-[70vw] h-screen gap-10 m-auto pb-10"
+    >
       <NavBar />
       <Hero />
       <Mac />
-      <Movile />
     </main>
+    <article
+      class="flex justify-center items-center flex-col w-full bg-secondary text-primary"
+    >
+      <h1
+        class="title text-2xl text-center bg-clip-text lg:text-6xl md:text-4xl sm:text-3xl w-full h-full pb-10"
+      >
+        Nuestros Productos
+      </h1>
+      <section
+        class="flex justify-center items-start flex-row flex-wrap gap-16 w-full h-screen"
+      >
+        <div class="grid grid-cols-2">
+          <div class="flex justify-center items-center flex-col">
+            <div class="flex justify-center items-center flex-col">
+              <h1 class="font-bold text-2xl text-center">
+                Desarrolo de apllicaciones moviles
+              </h1>
+              <h2>se crea cualquier tipo de aplicacion movil</h2>
+            </div>
+          </div>
+          <Movile urlVideo="/public/media/videomovile.mp4" />
+        </div>
+      </section>
+    </article>
   </body>
 </html>
