--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -25,14 +25,14 @@ import CodeCraterStudio from "@icons/codeCraterStudio.astro";
   id="main-header"
   class="bg-black text-white flex justify-between items-center p-4 sticky top-0 z-50"
 >
-  <div class="logo">
+  <div class="logo ml-[100px]">
     <img
       src="/public/logos/crafterCodeBox.svg"
       alt="Code Crafter Studio"
       class="h-10"
     />
   </div>
-  <div class="social-links flex items-center space-x-4">
+  <div class="social-links flex items-center space-x-4 mr-[100px]">
     <a href="https://github.com" target="_blank" aria-label="GitHub" class="text-sm">
       <Github />
     </a>
