fix(error): warning and changes desing

--- a/src/components/Mac.astro
+++ b/src/components/Mac.astro
@@ -1,63 +1,62 @@
-
 <style>
-    .mac-container {
-      position: relative;
-      width: 100%;
-      max-width: 1200px; /* Ajusta según el tamaño deseado */
-      margin: auto;
-    }
+  .mac-container {
+    position: relative;
+    width: 100%;
+    max-width: 1200px; /* Ajusta según el tamaño deseado */
+    margin: auto;
+  }
 
-    .mac-image {
-      width: 100%;
-      display: block;
-    }
+  .mac-image {
+    width: 100%;
+    display: block;
+  }
 
-    .video-container {
-      position: absolute;
-      top: 16%; /* Ajusta estos valores según la posición de la pantalla en la imagen */
+  .video-container {
+    position: absolute;
+    top: 16%; /* Ajusta estos valores según la posición de la pantalla en la imagen */
+    left: 12%;
+    width: 76%; /* Ajusta el ancho según la pantalla de la MacBook */
+    height: 60%; /* Ajusta la altura según la pantalla de la MacBook */
+    overflow: hidden;
+  }
+
+  @media (max-width: 734px) {
+    .video-container video {
+      top: 16%;
       left: 12%;
-      width: 76%; /* Ajusta el ancho según la pantalla de la MacBook */
-      height: 60%; /* Ajusta la altura según la pantalla de la MacBook */
-      overflow: hidden;
+      width: 59vw;
     }
-
-    @media (max-width: 734px) {
-      .video-container video {
-        top: 16%;
-        left: 12%;
-        width: 59vw;
-      }
+  }
+  @media (min-width: 735px) and (max-width: 1068px) {
+    .video-container video {
+      width: 55vw;
     }
-    @media (min-width: 735px) and (max-width: 1068px) {
-      .video-container video {
-        width: 55vw;
-      }
+  }
+  @media (min-width: 1069px) and (max-width: 1440px) {
+    .video-container {
+      top: 16%;
+      left: 12%;
+      width: 76%;
+      height: 60%;
+      width: 55vw;
     }
-    @media (min-width: 1069px) and (max-width: 1440px) {
-      .video-container {
-        top: 16%;
-        left: 12%;
-        width: 76%;
-        height: 60%;
-        width: 55vw;
-      }
+  }
+  @media (min-width: 1441px) {
+    .video-container {
+      top: 10%;
+      left: 10%;
+      height: 100%;
+      width: 56vw;
     }
-    @media (min-width: 1441px) {
-      .video-container {
-        top: 10%;
-        left: 10%;
-        height: 100%;
-        width: 56vw;
-      }
+  }
+  @media (min-width: 1920px) {
+    .video-container {
+      top: 10%;
+      left: 8.5%;
+      width: 50vw;
+      height: 80vh;
     }
-    @media (min-width: 1920px) {
-      .video-container {
-        top: 10%;
-        left: 8.5%;
-        width: 50vw;
-        height: 80vh;
-      }
-    }
+  }
 </style>
 <div
   class="mac-container relative z-10 w-full overflow-visible flex justify-center"
@@ -95,18 +94,15 @@
     <img
       src="https://www.apple.com/v/macbook-pro/ak/images/overview/shared/mbp_16_hw__cqlhn5ys0o9y_large.jpg"
       onload="__lp(event)"
-     />
+    />
   </picture>
   <div class="video-container absolute inset-0 scale-100 opacity-100">
     <video
-      src="/public/media/videoMac.mp4"
+      src="/media/videoMac.mp4"
       loop
       playsinline
       autoplay
-      class="
-        
-        bg-transparent 
-        m-auto"
-    ></video>
+      class="bg-transparent
+        m-auto"></video>
   </div>
 </div>
