--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -27,19 +27,34 @@ import CodeCraterStudio from "@icons/codeCraterStudio.astro";
 >
   <div class="logo ml-[100px]">
     <img
-      src="/public/logos/crafterCodeBox.svg"
+      src="/logos/crafterCodeBox.svg"
       alt="Code Crafter Studio"
       class="h-10"
     />
   </div>
   <div class="social-links flex items-center space-x-4 mr-[100px]">
-    <a href="https://github.com" target="_blank" aria-label="GitHub" class="text-sm">
+    <a
+      href="https://github.com"
+      target="_blank"
+      aria-label="GitHub"
+      class="text-sm"
+    >
       <Github />
     </a>
-    <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn" class="text-sm">
+    <a
+      href="https://linkedin.com"
+      target="_blank"
+      aria-label="LinkedIn"
+      class="text-sm"
+    >
       <Linkedin />
     </a>
-    <a href="https://discord.com" target="_blank" aria-label="Discord" class="text-sm">
+    <a
+      href="https://discord.com"
+      target="_blank"
+      aria-label="Discord"
+      class="text-sm"
+    >
       <Discord />
     </a>
   </div>
