--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,24 +1,28 @@
 ---
 import Movile from "./movile.astro";
 ---
+
 <style>
-    .title{
-      font-family: 'TWK Everett Bold', sans-serif;
-      letter-spacing: -0.02em;
-    }
+  .title {
+    font-family: "TWK Everett Bold", sans-serif;
+    letter-spacing: -0.02em;
+  }
 </style>
 <article
-class="flex justify-center items-center  w-full bg-secondary text-primary"
+  class="flex justify-center items-center w-full bg-secondary text-primary"
 >
-<h1
-  class="title text-2xl text-center bg-clip-text lg:text-5xl md:text-4xl sm:text-3xl w-full h-full pb-10"
->
-  Nuestros Productos
-</h1>
-<section
-  class="flex justify-center items-start flex-row flex-wrap gap-16 w-full h-screen"
->
-    <Movile urlVideo="/public/media/videomovile.mp4" />
-
-</section>
+  <div
+    class="flex justify-center items-center flex-wrap w-full md:w-[70%] h-full"
+  >
+    <h1
+      class="title text-2xl text-center bg-clip-text lg:text-5xl md:text-4xl sm:text-3xl w-full h-full pb-10"
+    >
+      Nuestros Productos
+    </h1>
+    <section
+      class="flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
+    >
+      <Movile urlVideo="/public/media/videomovile.mp4" />
+    </section>
+  </div>
 </article>
