--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import NavBar from "@components/NavBar.astro";
 import Hero from "@components/Hero.astro";
 import "../styles/global.css";
 import Mac from "@components/Mac.astro";
-import Services from "@components/Services.astro"
+import Services from "@components/Services.astro";
 ---
 
 <html lang="en">
@@ -14,16 +14,14 @@ import Services from "@components/Services.astro"
     <meta name="generator" content={Astro.generator} />
     <title>Code Crafther Studios</title>
   </head>
-  <body class="">
-    <header>
-    </header>
-    <main class="bg-primary" >
-      <NavBar />
-       <section class=" bg-primary w-[70vw] flex flex-col  gap-10 m-auto pb-10">
-          <Hero />
-          <Mac />
-       </section>
-      <Services/>
+  <body>
+    <NavBar />
+    <main class="bg-primary">
+      <section class="bg-primary w-[70vw] flex flex-col gap-10 m-auto pb-10">
+        <Hero />
+        <Mac />
+      </section>
+      <Services />
     </main>
   </body>
 </html>
