style(nabvar): refactor

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,19 +2,30 @@
   .title {
     font-family: "TWK Everett Bold", sans-serif;
     letter-spacing: -0.02em;
+    line-height:1em;
   }
 </style>
-<div class="flex flex-col gap-3 w-full md:w-[45vw] m-auto">
+<div class="flex flex-col gap-3 w-[45vw]  xl:w-[700px] m-auto mt-8">
   <h1
-    class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-6xl md:text-4xl sm:text-3xl w-full h-full pb-5"
+    class="title 
+    text-2xl 
+    text-center 
+    bg-gradient-to-r 
+    from-accent 
+    to-secondary 
+    text-transparent
+    bg-clip-text 
+    lg:text-[56px]
+    md:text-4xl 
+    sm:text-3xl 
+    w-full 
+    h-full 
+    pb-5"
   >
-    Innovación en Software y Tecnología
+      Si puedes imaginarlo podemos desarrollarlo.
   </h1>
 
   <h2 class="text-md md:text-lg text-center text-neutral">
-    En CodeCrafterStudios, desarrollamos cualquier producto de software que
-    necesites: IA, blockchain, web, móvil y automatización. Nuestra innovación y
-    enfoque personalizado garantizan resultados excepcionales. Impulse su éxito
-    con nosotros en la era digital.
+    en Code crafter studio creamos software a la medida de tus ideales.
   </h2>
 </div>
