--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,6 @@
 import Github from "@icons/github.astro";
 import Discord from "@icons/discord.astro";
 import Linkedin from "@icons/linkedin.astro";
-import CodeCraterStudio from "@icons/codeCraterStudio.astro";
 ---
 
 <script>
@@ -23,13 +22,13 @@ import CodeCraterStudio from "@icons/codeCraterStudio.astro";
 
 <header
   id="main-header"
-  class="bg-black text-white flex justify-between items-center p-4 sticky top-0 z-50"
+  class="bg-black text-white flex justify-between items-center p-2 sticky top-0 z-50"
 >
   <div class="logo ml-[100px]">
     <img
-      src="/logos/crafterCodeBox.svg"
+      src="/logos/logoCrafter.svg"
       alt="Code Crafter Studio"
-      class="h-10"
+      class="h-8"
     />
   </div>
   <div class="social-links flex items-center space-x-4 mr-[100px]">
