--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import Services from "@components/Services.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Code Crafther Studios</title>
   </head>
-  <body>
+  <body class="bg-primary">
     <NavBar />
-    <main class="bg-primary">
+    <main>
       <section class="bg-primary w-[70vw] flex flex-col gap-10 m-auto pb-10">
         <Hero />
         <Mac />
