change in index page

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
     line-height:1em;
   }
 </style>
-<div class="flex flex-col gap-3 w-[45vw]  xl:w-[700px] m-auto mt-8">
+<div class="flex flex-col gap-3 w-[45vw] xl:w-[700px] m-auto mt-8">
   <h1
     class="title 
     text-2xl 
@@ -20,12 +20,13 @@
     sm:text-3xl 
     w-full 
     h-full 
-    pb-5"
+    pb-5
+    mt-6"
   >
       Si puedes imaginarlo podemos desarrollarlo.
   </h1>
 
   <h2 class="text-md md:text-lg text-center text-neutral">
-    en Code crafter studio creamos software a la medida de tus ideales.
+    <strong>En Code Crafter Studio creamos software a la medida de tus ideales.</strong>
   </h2>
 </div>
