--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -15,7 +15,7 @@ import Movile from "./movile.astro";
     class="flex justify-center items-center flex-wrap w-full md:w-[70%] h-full"
   >
     <h1
-      class="title text-2xl text-center bg-clip-text lg:text-5xl md:text-4xl sm:text-3xl w-full h-full pb-10"
+      class="title text-2xl text-center bg-clip-text lg:text-5xl md:text-4xl sm:text-3xl w-full h-full pb-10 pt-10"
     >
       Nuestros Productos
     </h1>
