--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -22,7 +22,7 @@ import Linkedin from "@icons/linkedin.astro";
 
 <header
   id="main-header"
-  class="bg-black text-white flex justify-between items-center p-2 sticky top-0 z-50"
+  class="bg-black text-white flex justify-between items-center pb-4 pt-6 sticky top-0 z-50 "
 >
   <div class="logo ml-[100px]">
     <img
