--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,28 +1,87 @@
 ---
 import Movile from "./movile.astro";
+import Mac from "@components/Mac.astro";
 ---
 
 <style>
   .title {
     font-family: "TWK Everett Bold", sans-serif;
-    letter-spacing: -0.02em;
   }
 </style>
-<article
-  class="flex justify-center items-center w-full bg-secondary text-primary"
->
+<article class="flex justify-center items-center w-full">
   <div
     class="flex justify-center items-center flex-wrap w-full md:w-[70%] h-full"
   >
     <h1
-      class="title text-2xl text-center bg-clip-text lg:text-5xl md:text-4xl sm:text-3xl w-full h-full pb-10 pt-10"
+      class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-[56px] md:text-4xl sm:text-3xl w-full h-full pb-10 mt-6"
     >
-      Nuestros Productos
+      Como podemos ayudarte
     </h1>
-    <section
-      class="flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
-    >
-      <Movile urlVideo="/public/media/videomovile.mp4" />
+
+    <section class="grid grid-cols-2 items-center">
+      <article
+        class="col-span-2 2xl:col-span-1 grid grid-cols-1 items-center gap-8 pb-12 lg:grid-cols-12 max-w-screen-lg"
+      >
+        <div
+          class="lg:col-span-5 lg:col-start-2 flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
+        >
+          <Movile urlVideo="/public/media/videoAppletest3.mp4" />
+        </div>
+        <section class="grid gap-6 xl:col-span-5 text-secondary p-5">
+          <div>
+            <h4 class="mb-2 text-2xl font-bold md:text-3xl">
+              Desarrollo movil
+            </h4>
+            <div class="h-1 w-52 bg-accent"></div>
+          </div>
+          <p>
+            Aplicaciones móviles con diseño innovador, rendimiento ágil y máxima
+            protección de datos.
+          </p>
+          <div></div>
+        </section>
+      </article>
+      <article
+        class="col-span-2 2xl:col-span-1 grid grid-cols-1 items-center gap-8 pb-12 lg:grid-cols-12 max-w-screen-lg"
+      >
+        <div
+          class="lg:col-span-5 lg:col-start-2 flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
+        >
+          <Movile urlVideo="/public/media/videoAppletest2.mp4" />
+        </div>
+        <section class="grid gap-6 xl:col-span-5 text-secondary p-5">
+          <div>
+            <h4 class="mb-2 text-2xl font-bold md:text-3xl">
+              Inteligencia Artificial
+            </h4>
+            <div class="h-1 w-52 bg-accent"></div>
+          </div>
+          <p>
+            Soluciones de IA que transforman datos en decisiones inteligentes,
+            impulsando la innovación.
+          </p>
+          <div></div>
+        </section>
+      </article>
+      <article
+        class="col-span-2 flex justify-center items-center flex-col lg:flex-row"
+      >
+        <div
+          class="col-span-10 col-start-2 flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
+        >
+          <Mac />
+        </div>
+        <section class="grid gap-6 col-span-2 text-secondary p-5">
+          <div>
+            <h4 class="mb-2 text-2xl font-bold md:text-3xl">Desarrollo web</h4>
+            <div class="h-1 w-52 bg-accent"></div>
+          </div>
+          <p>
+            Creación de sitios web modernos, rápidos y responsivos, diseñados
+            para ofrecer una experiencia de usuario excepcional.
+          </p>
+        </section>
+      </article>
     </section>
   </div>
 </article>
