--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,18 @@
     font-weight: bold;
     font-style: normal;
 }
+
+.custom-background {
+    background-color: #13161c;
+    background-image: radial-gradient(37.88% 68.62% at 50% 0, rgba(10, 233, 138, 0.3) 0, rgba(0, 124, 71, 0) 80%),
+        radial-gradient(100% 28.09% at 100% 10%, rgba(10, 233, 138, 0.2) 0, rgba(0, 124, 71, 0.1) 80%, rgba(0, 124, 71, 0) 100%),
+        linear-gradient(180deg, rgba(0, 124, 71, 0.075) 35.79%, rgba(0, 124, 71, 0.05) 80%, #13161c),
+        radial-gradient(74.84% 135.56% at 100% 10%, rgba(0, 124, 71, 0.5) 0, #13161c 80%);
+    background-size: 300%;
+}
+
+.title {
+    font-family: "TWK Everett Bold", sans-serif;
+    letter-spacing: -0.02em;
+    line-height: 1em;
+}
