new chaganes ui and ix also funcionality fixed navbar

--- a/src/components/Mac.astro
+++ b/src/components/Mac.astro
@@ -1,11 +1,12 @@
 <div class="relative w-full max-w-[1200px] mx-auto">
-  <img class="w-full block" src="/public/media/laptop.webp" alt="Laptop" />
+  <img class="w-full block" src="/media/laptop.webp" alt="Laptop" />
   <div class="absolute top-[10%] left-[8%] w-[84%] h-[70%] overflow-hidden">
     <video
       src="/media/presentationweb.mp4"
       loop
       playsinline
       autoplay
+      muted
       class="w-full h-full object-cover"
     >
     </video>
