--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -8,12 +8,13 @@ import Mac from "@components/Mac.astro";
     font-family: "TWK Everett Bold", sans-serif;
   }
 </style>
-<article class="flex justify-center items-center w-full">
+<article class="flex justify-center items-center w-full pb-10">
   <div
     class="flex justify-center items-center flex-wrap w-full md:w-[70%] h-full"
   >
     <h1
-      class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-[56px] md:text-4xl sm:text-3xl w-full h-full pb-10 mt-6"
+      id="services"
+      class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-[56px] md:text-4xl sm:text-3xl w-full h-full pb-10 pt-[85px] mt-[-40px]"
     >
       Como podemos ayudarte
     </h1>
@@ -25,7 +26,7 @@ import Mac from "@components/Mac.astro";
         <div
           class="lg:col-span-5 lg:col-start-2 flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
         >
-          <Movile urlVideo="/public/media/videoAppletest3.mp4" />
+          <Movile urlVideo="/media/videoAppletest3.mp4" />
         </div>
         <section class="grid gap-6 xl:col-span-5 text-secondary p-5">
           <div>
@@ -47,7 +48,7 @@ import Mac from "@components/Mac.astro";
         <div
           class="lg:col-span-5 lg:col-start-2 flex justify-center items-start flex-row flex-wrap gap-16 w-full h-full"
         >
-          <Movile urlVideo="/public/media/videoAppletest2.mp4" />
+          <Movile urlVideo="/media/videoAppletest2.mp4" />
         </div>
         <section class="grid gap-6 xl:col-span-5 text-secondary p-5">
           <div>
