--- a/src/components/movile.astro
+++ b/src/components/movile.astro
@@ -18,6 +18,7 @@ const { urlVideo } = Astro.props;
         loop
         playsinline
         autoplay
+        muted
         class="cursor-auto w-full h-full rounded-[35px] object-cover bg-transparent p-6"
       ></video>
     </div>
