--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,6 @@
 ---
-
+import ListItems from "./listItems.astro";
+import ButtonWhatsap from "./ButtonWhatsap.astro";
 ---
 
 <script>
@@ -12,42 +13,64 @@
     }
   }
 
+  // Find our component DOM on the page.
+  const buttons = document.querySelectorAll("[data-confetti-button]");
+
+  // Add event listeners to fire confetti when a button is clicked.
+  buttons.forEach((button) => {
+    button.addEventListener("click", () => toggleMenu());
+  });
+
+  function toggleMenu() {
+    const menu = document.getElementById("mobile-menu");
+    menu?.classList.toggle("hidden");
+  }
+
   if (typeof window !== "undefined") {
     window.addEventListener("scroll", handleScroll);
   }
 </script>
 
-<headera
+<header
   id="main-header"
-  class="bg-transparent text-white flex justify-around items-center pb-4 pt-6 sticky top-0 z-50"
+  class="bg-transparent text-white flex justify-between md:justify-around items-center pb-4 pt-6 sticky top-0 z-50"
 >
   <div class="logo ml-[100px]">
     <img src="/logos/logoCrafter.svg" alt="Code Crafter Studio" class="h-10" />
   </div>
-  <div class="social-links flex items-center space-x-4 mr-[100px]">
-    <a
-      href="https://github.com"
-      target="_blank"
-      aria-label="About"
-      class="text-lg"
-    >
-      Sobre Nosotros
-    </a>
-    <a
-      href="https://linkedin.com"
-      target="_blank"
-      aria-label="contac"
-      class="text-lg"
-    >
-      Contatanos
-    </a>
-    <a
-      href="https://discord.com"
-      target="_blank"
-      aria-label="services"
-      class="text-lg"
-    >
-      Servicios
-    </a>
+  <div class="hidden md:flex items-center space-x-4 mr-[100px]">
+    <ListItems />
   </div>
-</headera>
+  <div class="hidden md:flex">
+    <ButtonWhatsap />
+  </div>
+  <!-- Botón para el menú hamburguesa en móvil -->
+  <button
+    data-confetti-button
+    class="md:hidden mr-[100px] focus:outline-none"
+    aria-label="Menu"
+  >
+    <svg
+      class="w-6 h-6"
+      fill="none"
+      stroke="currentColor"
+      viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M4 6h16M4 12h16m-7 6h7"></path>
+    </svg>
+  </button>
+</header>
+
+<!-- Menú móvil -->
+<div
+  id="mobile-menu"
+  class="hidden flex md:hidden flex-col items-center space-y-4 p-4 absolute top-16 right-0 left-0 z-50 text-secondary bg-primary custom-background"
+>
+  <ListItems />
+  <ButtonWhatsap />
+</div>
