--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,30 +7,34 @@ import Team from "@components/Team.astro";
 
 const team = [
   {
-    photo: "/media/juanPabloCeron.jpg",
-    name: "Juan Pablo",
-    role: "Developer",
+    photo: "/media/juanPablo.jpg",
+    name: "Juan Pablo Cérón",
+    role: "Líder Técnico y Fundador",
   },
   {
     photo: "/media/juanYonda.jpg",
-    name: "Juan Yonda",
-    role: "Developer",
+    name: "Juan Camilo Yonda Conda",
+    role: "Líder de Desarrollo de Software",
   },
-  // {
-  //   photo: "/media/andreacoque.jpg",
-  //   name: "Karen coque",
-  //   role: "Contadora",
-  // },
-  // {
-  //   photo:
-  //     "https://quantdev.co/_next/image?url=%2Fimages%2FteamOrigin%2Fmanuel.png&w=3840&q=75",
-  //   name: "Andres ordoñez",
-  //   role: "Developer",
-  // },
+  {
+    photo: "/media/karen.jpg",
+    name: "Karen coque",
+    role: "Coordinadora Administrativa y Financiera",
+  },
   {
     photo: "/media/andres.jpg",
-    name: "Andres ordoñez",
-    role: "Developer",
+    name: "Edinson Andres Ordoñez",
+    role: "Especialista en Ciberseguridad",
+  },
+  {
+    photo: "/media/Luna.jpg",
+    name: "Luna Angelica Giraldo Pulgarin",
+    role: "Responsable de Control de Calidad (QA)",
+  },
+  {
+    photo: "/media/santiago.jpg",
+    name: "David Santiago Rodriguez Cruz ",
+    role: "Desarrollador de Aplicaciones Móviles",
   },
 ];
 ---
