feat(ci/cd): add ci/cd

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -12,12 +12,12 @@ import Mac from "@components/Mac.astro";
   <div
     class="flex justify-center items-center flex-wrap w-full md:w-[70%] h-full"
   >
-    <h1
+    <h2
       id="services"
       class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-[56px] md:text-4xl sm:text-3xl w-full h-full pb-10 pt-[85px] mt-[-40px]"
     >
-      Como podemos ayudarte
-    </h1>
+      Cómo podemos ayudarte
+    </h2>
 
     <section class="grid grid-cols-2 items-center">
       <article
