--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,13 +1,13 @@
-<div class="flex flex-col gap-3 w-[85vw] xl:w-[700px] m-auto mt-8">
+<header class="flex flex-col gap-3 w-[85vw] xl:w-[700px] m-auto mt-8">
   <h1
     class="title text-2xl text-center bg-gradient-to-r from-accent to-secondary text-transparent bg-clip-text lg:text-[56px] md:text-4xl sm:text-3xl w-full h-full pb-5 mt-6"
   >
     Si puedes imaginarlo podemos desarrollarlo.
   </h1>
 
-  <h2 class="text-md md:text-lg text-center text-neutral">
+  <p class="text-md md:text-lg text-center text-neutral">
     <strong class="title"
       >En Code Crafter Studio creamos software a la medida de tus ideales.</strong
     >
-  </h2>
-</div>
+  </p>
+</header>
